--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -10,8 +10,7 @@
     <script>
         function done(todoTag){
             const _id = todoTag.getAttribite("data-todoId");
-            console.log(_id)
-            fetch('/', {
+            fetch('/done', {
                 method: 'PUT',
                 body: JSON.stringify({ id: `${_id}`}),
                 headers: {
@@ -19,12 +18,20 @@
                 }
             })
             .catch((error) => {
-                console.error('Error',error);
+                console.error('Error', error);
             });
         }
         function deleteItem(todoTag){
             const id = todoTag.getAttribite("data-todoId");
-            console.log(id)
+            fetch(`/delete/${_id}`, {
+                method: 'DELETE',
+                headers: {
+                    "Content-Type": "application/json",
+                }
+            })
+            .catch((error) => {
+                console.error('Error', error);
+            });
         }
     </script>
 </head>
@@ -34,7 +41,7 @@
             To-Do Items
         </h2>
         <div class="todo">
-            <form action="/" method="POST" class="todo-header">
+            <form action="/create" method="POST" class="todo-header">
                 <input type="text" name="content" />
                 <button type="submit">
                     <i class="fa fa-plus"></i> 
@@ -43,9 +50,15 @@
             <ul class="todo-list" >
                 <% todoList.forEach(function(todo){ %>
                     <li class="todo-list-item">
-                        <div class="todo-list-item-name">
-                            <%= todo.todo %>
-                        </div>
+                        <% if(todo.done){ %>
+                            <div class="todo-list-item-name strike-through">
+                                <%= todo.todo %>
+                            </div>
+                        <% } else { %>
+                            <div class="todo-list-item-name">
+                                <%= todo.todo %>
+                            </div>
+                        <% } %>
                         <button data-todoId="<%= todo._id %>" class="remove" onclick="done(this)">
                             <i class="fa fa-pencil"></i>
                         </button>
